--- a/blog.htm
+++ b/blog.htm
@@ -28,7 +28,7 @@
                                                     <div class="line"></div> 
                                                             <nav class="nav">
                                                                 <ul>
-                                                                    <li><a href="./blog2.html">首页</a></li>
+                                                                    <li><a href="{{ site.baseurl }}/">首页</a></li>
                                                                     <li><a href="./pages/tags.html">博文</a></li>
                                                                     <li><a href="./pages/resume.html">相册</a></li>
                                                                     <li><a href="./pages/handbook.html">音乐</a></li>
