--- a/blog.htm
+++ b/blog.htm
@@ -15,7 +15,7 @@
         <div class="canvaszz">   
                         <!-- 欢迎文字动画 -->
                      <div class="anim">
-                         <marquee direction=left ><font color=white>欢迎来到心中放歌的世界</font></marquee>
+                         <marquee direction=left ><font color=white>欢迎来到心中放歌的世界,点击下方任意按钮了解你想知道(Welcome to the world of songs,click on any button below to understand what you want to know)</font></marquee>
 
                                 <div class="center">
                                                 <!-- logo -->
