--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         <div class="canvaszz">   
                         <!-- 欢迎文字动画 -->
                      <div class="anim">
-                         <marquee direction=left ><font color=white>点击CONME ON 进入心中放歌的世界</font></marquee>
+                         <marquee direction=left ><font color=white>大家好,欢迎访问心中放歌的博客,点击COME ON进入心中放歌的世界(Hello everyone,welcome to visit the heart of the blog,click COME ON on into the heart of the world)</font></marquee>
 
                                 <div class="center">
                                                 <h1>心中放歌</h1>
