--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
                                             The secret of success is constanycy to purpose</h3>
                                                     <h3>成功的秘诀在于对目标的忠实
                                                     </h3>
-                                                    <h3>--Wangmingming</h3>
+                                                    <h3>--XZFG</h3>
                                                       <!-- 横线 -->
                                                     <div class="line"></div>    
                                                     <!-- 进入博客入口 -->
